<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/smsCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/backLayout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="@dimen/dimen_16">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_4"
                android:src="@drawable/ic_arrow_back" />

        </FrameLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/titleCodeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginTop="@dimen/dimen_28"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_12"
            android:text="@string/results"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/vrpView"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginTop="@dimen/dimen_28"
            android:hint="@string/enter_vrc"
            android:gravity="start|center"
            android:text="@string/vrp_results"
            android:clickable="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_16"
            android:textSize="@dimen/text_16"
            android:visibility="visible" />

        <TextView
            android:id="@+id/vrcView"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginTop="28dp"
            android:gravity="start|center"
            android:text="@string/vrc_results"
            android:clickable="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_16"
            android:textSize="@dimen/text_16"
            android:visibility="visible" />

        <TextView
            android:id="@+id/driversLicenseView"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_52"
            android:layout_marginHorizontal="@dimen/dimen_24"
            android:layout_marginTop="28dp"
            android:gravity="start|center"
            android:text="@string/drivers_license_results"
            android:clickable="false"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_16"
            android:textSize="@dimen/text_16"
            android:visibility="visible" />

    </LinearLayout>

</FrameLayout>
